...
    bool isLowerFound=false;
    bool isNumberfound=false;
    AsciiEncoder asciiEncoder=const AsciiEncoder();

      if (value.isEmpty)
      {
        return "Password is required";
      }
      else if(value.isNotEmpty)
      {
          if(value.length<8)
          {
            return "Minimum of  8 characters required";
          }

          var splitvalue= value.split('');

          for (var i in splitvalue)
          {
...
                isLowerFound=true;
              }
          }

          if(!isAlphafound)
          {
            return "password must contain uppercase letter";
          }
          if(!ischarfound)
          {
            return "password must contain special characters";
          }
           if(!isNumberfound)
          {
            return "password must contain number";
          }
           if(!isLowerFound)
          {
            return "password must contain lowercase letter";
          }
      }
      
      return null;
      
  }
...
 
      if(confirmPassword!=user.password)
      {
          setState(() {
            isEnable=true;
          });
           ScaffoldMessenger.of(context).showSnackBar(const SnackBar(content: Text("Password and confirm password must be the same")));
      }
      else
      {
          user.userID=Identification().userID;
          
          final access= ServerRepo();
...
