...
    "login": "Login",
    "forgot_password": "Forgot password?",
    "email": "Email",
    "password": "Password",
    "reset_password": "Reset Password",
    "send_reset_link": "Send Reset Link",
    "item_required": "Item is Required",
    "input_email": "Input needs to be email address",
    "input_phone": "Input needs to be phone number",
    "dont_have_account": "Don't have an account? Sign up",
    "signup": "Sign up",
    "signin": "Sign in to your account",
    "name": "ጦቢያ",
    "welcome": "Welcome back, Reader",
...
